genereal css rules are written

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="bcard__header">
           <img
             class="bcard__profile-img"
-            src="./assets/profile_img_800.jpeg"
+            src="./assets/niggaaman.jpg"
             alt="Profile Image"
           />
         </div>
@@ -24,7 +24,7 @@
         <!-- Body -->
         <div class="bcard__body">
           <div class="bcard__heading-wrapper">
-            <h1 class="bcard__name">John Doe</h1>
+            <h1 class="bcard__name">Metehan Kaşcıoğlu</h1>
             <h2 class="bcard__title">Student</h2>
             <div class="bcard__website">
               <a
