--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
         <div class="bcard__body">
           <div class="bcard__heading-wrapper">
             <h1 class="bcard__name">Metehan Kaşcıoğlu</h1>
-            <h2 class="bcard__title">Student</h2>
+            <h2 class="bcard__title">Jr.Developer</h2>
             <div class="bcard__website">
               <a
                 style="
                   color: #FFFFFF;
-                  font-size: 1.24rem;
+                  font-size: 1.45rem;
                   font-weight: 400;
                   line-height: 15px;
                   cursor: pointer;
                 "
                 href="#"
                 target="__blank"
-                >johndoe.com</a
+                >metehan.com</a
               >
             </div>
           </div>
 
           <div class="bcard__btn-wrapper">
-            <a href="mailto:#" target="__blank">
+            <a href="mailto:mutantmetevocuk@gmail.com" target="__blank">
               <button class="bcard__btn bcard__btn--email">
                 <i class="bcard__btn-icon fa-regular fa-envelope"></i>Email</button></a>
-            <a href="#" target="__blank">
+            <a href="https://www.linkedin.com/in/metehankascioglu/" target="__blank">
                 <button class="bcard__btn bcard__btn--linkedin">
                 <i class="bcard__btn-icon fa-brands fa-linkedin"></i>Linkedin</button></a>
           </div>
@@ -61,13 +61,12 @@
               </p>
               <p class="bcard__text">
                 #whoami
-                <span role="img" aria-label="hand-signs">👉🏼</span> #webdeveloper
-                #webdesigner #blockchaindeveloper #freelancer #selflearner
+                <span role="img" aria-label="hand-signs">👉🏼</span> #Jr.Developer
               </p>
             </div>
             <div class="bcard__interests">
               <h3 class="bcard__heading">Interests</h3>
-              <p class="bcard__text">Web3, Blockchain, Travel</p>
+              <p class="bcard__text">Web3, Blockchain, Learn Coding, NFT</p>
             </div>
           </div>
         </div>
