--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="bcard__header">
           <img
             class="bcard__profile-img"
-            src="./assets/niggaaman.jpg"
+            src="./assets/mete.jpg"
             alt="Profile Image"
           />
         </div>
@@ -73,9 +73,9 @@
 
         <!-- Footer -->
         <div class="bcard__footer">
-          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-twitter"></i></a>
+          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-x-twitter fa-fade"></i></a>
           <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-instagram"></i></a>
-          <a class="bcard__footer-icon" href="#" target="__blank"><i class="fa-brands fa-github"></i></a>
+          <a class="bcard__footer-icon" href="https://github.com/metecocuk" target="__blank"><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
     </div>
