--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
           <div class="bcard__about">
             <h3 class="bcard__heading">About Me</h3>
             <p class="bcard__text">
-              I am a Full Stack Web Developer. I have been working on
-              Blockchain and Web3 technologies for a while. I am also a
-              self-learner and I love to learn new things.
+              Hello there, my name is Metehan. I am 17 years old and I am a high school student.
+              I live in Ankara, Turkey. I have been working on web development for a while, and I am a student at USTech Academy.
+              I am new to these things, but I am also very open to learning new things about coding.
+              I started coding when I was 16, but I feel that my learning journey will never stop.
             </p>
             <p class="bcard__text">
               #whoami
