title and my website link changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>USteen Final Project</title>
+  <title>Metehan Kaşcıoğlu</title>
   <link rel="stylesheet" href="main.css" />
   <script src="https://kit.fontawesome.com/c5248b2bd7.js" crossorigin="anonymous"></script>
 </head>
@@ -30,7 +30,7 @@
                   font-weight: 400;
                   line-height: 15px;
                   cursor: pointer;
-                " href="#" target="__blank">metehan.com</a>
+                " href="https://metehankascioglu.vercel.app" target="__blank">metehankascioglu.vercel.app</a>
           </div>
         </div>
 
