--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="bcard">
       <!-- Header -->
       <div class="bcard__header">
-        <img class="bcard__profile-img" src="./assets/zart.png" alt="Profile Image" />
+        <img class="bcard__profile-img" src="./assets/metehan.png" alt="Profile Image" />
       </div>
 
       <!-- Body -->
