background color animation added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <h3 class="bcard__heading">About Me</h3>
             <p class="bcard__text">
               Hello there, my name is Metehan. I am 17 years old and I am a high school student.
-              I live in Ankara, Turkey. I have been working on web development for a while, and I am a student at USTech Academy.
+              I live in Ankara, Turkey. I have been working on web development for a while, and I am a student at USTech
+              Academy.
               I am new to these things, but I am also very open to learning new things about coding.
               I started coding when I was 16, but I feel that my learning journey will never stop.
             </p>
