link changed again

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   font-weight: 400;
                   line-height: 15px;
                   cursor: pointer;
-                " href="https://metehankascioglu.vercel.app" target="__blank">metehan--kascioglu.vercel.app</a>
+                " href="https://metehan--kascioglu.vercel.app" target="__blank">metehan--kascioglu.vercel.app</a>
           </div>
         </div>
 
